# poetry-recommender

./: .cursorrules  .env.example  .gitignore  AGENTS_PROMPTS.md  AI_INSTRUCTIONS.md  ARCHITECTURE.md  Assignment_3.tex  Assignment_5.tex  Assignment_6.tex  Assignment_7.tex  CHANGELOG.md  CONTRIBUTING.md  LICENSE  RAILWAY_DEPLOY.md  README.md  TASKS_AND_ASSIGNMENTS.md  alembic_error.txt  assignment2_report.tex  assignment4_report.tex  assignments_output.md  backend_logs.txt  background_build.py  bot_logs.txt  create_issues.sh  debug.txt  docker-compose.yml  output.txt  postman_collection.json  render.yaml  res.txt  result.txt  setup_db.py  test_actual_vosk.py  test_en.py  test_fuzzy.py  test_line_misses.py  test_local_eval.py  test_out.txt  test_window.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  technical_task.md  user_story.md
.github/agents/: backend-harden.agent.md  bot-polish.agent.md  swp-explore.agent.md
.github/instructions/: backend.instructions.md  bot.instructions.md  tests.instructions.md
.github/prompts/: add-conversation.prompt.md  dedup-code.prompt.md  fix-i18n.prompt.md  fix-orphan-callbacks.prompt.md  fix-scheduler.prompt.md  fix-ux.prompt.md  harden-backend.prompt.md  verify-features.prompt.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  download_models.py  pyproject.toml  test_local_eval.py
backend/alembic/: env.py
backend/alembic/versions/: 1a86bad220fa_gamification.py  5f6a64f16f72_initial_schema.py  a3b7c9d1e2f4_add_favorites_collections.py  b4c8d2e3f5a6_add_engagement_tables.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/api/: collections.py  engagement.py  favorites.py  memorization.py  poems.py  recommendations.py  router.py  users.py
backend/app/models/: __init__.py  achievement.py  collection.py  daily_challenge.py  favorite.py  memorization.py  poem.py  user.py
backend/app/schemas/: collection.py  favorite.py  memorization.py  poem.py  user.py  voice.py
backend/app/seed/: collections_data.py  force_parse.py  mass_seed.py  poems_data.py  seed_collections.py  seed_embeddings.py  seed_poems.py
backend/app/services/: achievements.py  daily_challenge.py  ml.py  parser.py  recommender.py  spaced_rep.py  tts.py  voice_evaluator.py
backend/tests/: conftest.py  test_api.py  test_spaced_rep.py  test_voice_evaluator.py
bot/: Dockerfile  pyproject.toml
bot/app/: __init__.py  config.py  main.py  scheduler.py  translations.py  utils.py
bot/app/handlers/: start.py  voice.py
bot/app/keyboards/: menus.py
bot/app/services/: api_client.py
docs/architecture/: architecture.md
docs/automation/: continuous-integration.md
docs/development/: kanban.md
docs/quality-assurance/: automated-tests.md  quality-attribute-scenarios.md  user-acceptance-tests.md
docs/quality-attributes/: quality-attribute-scenarios.md
docs/reports/: ai-usage.md  transition-report.md
