[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "poetry-recommender-backend"
version = "0.1.0"
description = "Backend API for Poetry Recommender System"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "vosk>=0.3.45",
    "python-multipart>=0.0.9",
    "pgvector>=0.2.5",
    "sentence-transformers>=2.6.0",
    "beautifulsoup4>=4.12.3",
    "aiohttp>=3.9.3",
    "apscheduler>=3.10.4",
    "gTTS>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "F841", "SIM105", "B008", "F401", "E701", "E702", "E402", "F821", "N806", "B007", "E722", "SIM108", "W293", "UP041", "I001", "UP017", "W291", "UP035", "UP006", "UP008", "UP045", "F541"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
