[project]
name = "poetry-recommender-bot"
version = "0.1.0"
description = "Telegram bot for Poetry Recommender System"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
